# skyrim-sentinel

./: .gitattributes  .gitignore  LICENSE  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
demo/: demo.py
docs/: golden_set.json  index.html
sentinel-client/: README.md  api_client.py  build.py  local_cache.py  main.py  nuitka-crash-report.xml  pyproject.toml  scanner.py  version.py
sentinel-client/ui/: __init__.py  app.py
sentinel-worker/: biome.json  package-lock.json  package.json  worker-configuration.d.ts  wrangler.jsonc
sentinel-worker/src/: index.ts
tools/: downloads_hashes.json  golden_set.json  golden_set_schema.json  hasher.py  kv_bulk.json  kv_schema.json  merge_hashes.py  new_hashes.json  pyproject.toml  ruff.toml  scan_results.json  seed_kv.ts  sync_golden_set.py  test_hasher.py  tsconfig.json
