[project]
name = "sentinel-client"
version = "0.1.0"
description = "Skyrim Sentinel - SKSE Plugin Integrity Checker"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["customtkinter>=5.2.0", "requests>=2.32.0"]

[project.scripts]
sentinel = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
