[project]
name = "sentinel-client"
version = "0.1.0"
description = "Skyrim Sentinel - SKSE Plugin Integrity Checker"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["customtkinter>=5.2.0", "requests>=2.32.0"]

[project.optional-dependencies]
build = ["pyinstaller>=6.0"]

[project.scripts]
sentinel = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ui"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
